--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,8 +17,8 @@ layout: compress
     {% include masthead.html %}
 
     {{ content }}
-    <p style="text-align: center"><a href='https://clustrmaps.com/site/1c02v'  title='Visit tracker'><img src='//clustrmaps.com/map_v2.js?d=UePNdeWLPPJk7834Mj-GBaQb0uPqjUKYNDWUBxlijFU&cl=ffffff&w=a'/></a></p>
-
+    <!-- <p style="text-align: center"><a href='https://clustrmaps.com/site/1c02v'  title='Visit tracker'><img src='//clustrmaps.com/map_v2.js?d=UePNdeWLPPJk7834Mj-GBaQb0uPqjUKYNDWUBxlijFU&cl=ffffff&w=a'/></a></p> -->
+    <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=UePNdeWLPPJk7834Mj-GBaQb0uPqjUKYNDWUBxlijFU"></script>
     <div class="page__footer">
       <footer>
         {% include footer/custom.html %}
