--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,12 +17,12 @@ layout: compress
     {% include masthead.html %}
 
     {{ content }}
-    
+
     <div class="page__footer">
       <footer>
         <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=UePNdeWLPPJk7834Mj-GBaQb0uPqjUKYNDWUBxlijFU"></script>
         <!-- {% include footer/custom.html %} -->
-        {% include footer.html %}
+        <!-- {% include footer.html %} -->
       </footer>
     </div>
 
