--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -38,7 +38,7 @@
       {% endif %} -->
       {% if author.email %}
       <li>
-        <i class="fas fa-fw fa-envelope icon-pad-right" aria-hidden="true"></i>{{ author.email }}
+        <li class="author__desktop"><i class="fas fa-fw fa-envelope icon-pad-right" aria-hidden="true"></i>{{ author.email }}
       </li>
       {% endif %}
 
