--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -38,9 +38,9 @@ $type-size-2                : 1.953em;  // ~31.248px
 $type-size-3                : 1.563em;  // ~25.008px
 $type-size-4                : 1.25em;   // ~20px
 $type-size-5                : 1em;      // ~16px
-$type-size-6                : 0.75em;   // ~12px
-$type-size-7                : 0.6875em; // ~11px
-$type-size-8                : 0.625em;  // ~10px
+$type-size-6                : 0.625em;   // ~12px 0.75em
+$type-size-7                : 0.625em; // ~11px 0.6875em
+$type-size-8                : 0.625em;  // ~10px 0.625em
 
 /* masthead properties */
 $masthead-height            : 70px;
