--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -33,10 +33,10 @@ $header-font-family         : $sans-serif;
 $caption-font-family        : $serif;
 
 /* type scale */
-$type-size-1                : 2.441em;  // ~39.056px
-$type-size-2                : 1.953em;  // ~31.248px
-$type-size-3                : 1.563em;  // ~25.008px
-$type-size-4                : 1.25em;   // ~20px
+$type-size-1                : 2.441em;  // ~39.056px 2.441
+$type-size-2                : 1em;  // ~31.248px 1.953
+$type-size-3                : 1em;  // ~25.008px 1.563
+$type-size-4                : 1em;   // ~20px 1.25
 $type-size-5                : 1em;      // ~16px
 $type-size-6                : 0.625em;   // ~12px 0.75em
 $type-size-7                : 0.625em; // ~11px 0.6875em
